<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/flight_tracker"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email"/>
    <EditText android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:id="@+id/username"  android:inputType="textEmailAddress"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password"/>
    <EditText android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:id="@+id/password"  android:inputType="textPassword"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:text="@string/log_in"
            android:onClick="onClickLogin"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_up" android:onClick="onClickSignUp"/>




</LinearLayout>
