<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        tools:context=".SignUpActivity">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/email_et" android:inputType="textEmailAddress"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pass1_et" android:inputType="textPassword"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repeat_password"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/pass2_et" android:inputType="textPassword"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="onSubmit" android:text="@string/sign_upp"/>

</LinearLayout>