<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/nearest_error"/>

    <ScrollView android:layout_width="wrap_content" android:layout_height="0dp" android:scrollbars="none"
                android:layout_weight="1">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/t_layout_flights">


        <e.ib.flighttracker1.view.MyTableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/airline"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/departure_airport"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/arrival_airport"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/scheduled_departure_time"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp"/>

        </e.ib.flighttracker1.view.MyTableRow>

    </TableLayout>
    </ScrollView>

</LinearLayout>