<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:padding="20dp">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/nearest_error"/>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"
            android:layout_weight="1">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/t_layout">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:text="@string/icao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <TextView
                    android:text="@string/airport_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"/>
            <TextView
                    android:text="@string/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"/>
            <TextView
                    android:text="@string/distance_km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9"/>
        </TableRow>
    </TableLayout>
    </ScrollView>
</LinearLayout>